crossplane-resources/core/prometheus-provider-helm-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.dev
      secretName: grafana-tls
  rules:
    - host: grafana.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
